Spaceship, character movement and module interaction

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "BSP.sln"
+    "dotnet.defaultSolution": "H2025_TCH099_03_A_C1.sln"
 }
